# MyTelegramBot2

./: .replit  README.md  my-project-bot-8163-56c4aa024bd9.json  pyproject.toml  replit.md
MyTelegramBot/: Main.py  README.md  main_replit.py  requirements.txt
api/: ping.py
